--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <title>E-metall psb</title>
 
-
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
 
     <script defer src="js/jquery-3.6.3.min.js"></script>
