--- a/index.html
+++ b/index.html
@@ -3193,7 +3193,7 @@
                             </div>
                         </div>
                         <div class="psb-about__item__btns">
-                            <a href="#" class="psb-btn_transparent psb-btn_44">Подробнее</a>
+                            <a href="https://www.psbank.ru/Business/Loans/WithoutPapers" class="psb-btn_transparent psb-btn_44" target="_blank" rel="noopener noreferrer">Подробнее</a>
                             <button type="button" class="psb-btn psb-btn_44 consult">Оформить заявку</button>
                         </div>
                     </div>
@@ -3233,7 +3233,7 @@
                             </div>
                         </div>
                         <div class="psb-about__item__btns">
-                            <a href="#" class="psb-btn_transparent psb-btn_44">Подробнее</a>
+                            <a href="https://www.psbank.ru/Business/Loans/Contractual" class="psb-btn_transparent psb-btn_44" target="_blank" rel="noopener noreferrer">Подробнее</a>
                             <button type="button" class="psb-btn psb-btn_44 consult">Оформить заявку</button>
                         </div>
                     </div>
