remove header footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    
     <main>
         <section class="psb-promo">
-            <div class="container">
+            <div class="psb-container">
                 <div class="psb-promo__content">
                     <img src="img/psb-logo.svg" alt="ПСБ" width="139" height="42" class="psb-promo__logo">
                     <h1 class="psb-promo__title">
@@ -34,8 +34,8 @@
             </div>
         </section>
         <section class="psb-wins">
-            <div class="container">
-                <h2 class="title">
+            <div class="psb-container">
+                <h2 class="psb-title">
                     Мы являемся официальным партнером Промсвязьбанка
                 </h2>
                 <div class="psb-wins__wrapper">
@@ -71,8 +71,8 @@
             </div>
         </section>
         <section class="psb-about">
-            <div class="container">
-                <h2 class="title">Масштабируйте бизнес с ПСБ</h2>
+            <div class="psb-container">
+                <h2 class="psb-title">Масштабируйте бизнес с ПСБ</h2>
                 <div class="psb-about__wrapper">
                     <div class="psb-about__item">
                         
@@ -158,8 +158,8 @@
             </div>
         </section>
         <section class="psb-credit">
-            <div class="container">
-                <h2 class="title">Как получить кредит</h2>
+            <div class="psb-container">
+                <h2 class="psb-title">Как получить кредит</h2>
                 <div class="psb-credit__wrapper">
                     <div class="psb-credit__item">
                         <div class="psb-credit__img">
@@ -190,8 +190,8 @@
             </div>
         </section>
         <section class="psb-options">
-            <div class="container">
-                <h2 class="title">
+            <div class="psb-container">
+                <h2 class="psb-title">
                     Условия кредитования
                 </h2>
                 <div class="psb-tabs">
@@ -318,10 +318,10 @@
             </div>
         </section>
         <section class="psb-form">
-            <div class="container">
+            <div class="psb-container">
                 <div class="psb-form__wrapper">
                     <div class="psb-form__content">
-                        <h2 class="title">
+                        <h2 class="psb-title">
                             Подать заявку на кредит
                         </h2>
                         <p class="psb-form__text">
@@ -350,7 +350,7 @@
    
     <div class="psb-modal">
         <button type="button" class="psb-modal__close"></button>
-        <h2 class="title">
+        <h2 class="psb-title">
             Подать заявку на кредит
         </h2>
         
